--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
 		"install:all": "npm install && npm install --prefix frontend && npm install --prefix backend",
 		"start:frontend": "npm start --prefix frontend",
 		"start:backend": "npm start --prefix backend",
-		"start": "concurrently \"npm start --prefix frontend\" \"npm start --prefix backend\"",
-		"dev": "concurrently \"npm start --prefix frontend\" \"npm run dev --prefix backend\"",
+		"start": "concurrently \"npm start --prefix backend\" \"npm start --prefix frontend\"",
+		"dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\"",
 		"lint:frontend": "cd frontend && npm run lint",
 		"lint:backend": "cd backend && npm run lint",
 		"lint": "npm run lint -prefix frontend && npm run lint:backend",
