Add logout endpoint and create refreshToken db queries

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"start": "tsx index.ts",
 		"dev": "nodemon --exec tsx index.ts",
-		"lint": "eslint . --fix"
+		"lint": "eslint . --fix",
+		"format": "prettier --write ."
 	},
 	"keywords": [],
 	"author": "",
