--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@tailwindcss/vite": "^4.0.9",
 		"chat-app": "file:..",
+		"e2e-encrypted-real-time-chat-app": "file:..",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-router-dom": "^7.2.0",
