--- a/backend/package.json
+++ b/backend/package.json
@@ -21,9 +21,11 @@
 		"dotenv": "^16.4.7",
 		"e2e-encrypted-real-time-chat-app": "file:..",
 		"express": "^4.21.2",
+		"helmet": "^8.0.0",
 		"jsonwebtoken": "^9.0.2",
 		"knex": "^3.1.0",
 		"pg": "^8.13.3",
+		"real-time-chat-app": "file:..",
 		"socket.io": "^4.8.1"
 	},
 	"devDependencies": {
