--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
 		"cookie": "^1.0.2",
 		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
+		"dompurify": "^3.2.4",
 		"dotenv": "^16.4.7",
 		"e2e-encrypted-real-time-chat-app": "file:..",
 		"express": "^4.21.2",
