--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ JWT_REFRESH_SECRET=your_jwt_refresh_secret
 ACCESS_TOKEN_EXPIRATION=15m
 REFRESH_TOKEN_EXPIRATION=7d
 
+DB_ENCRYPTION_KEY=your_db_encryption_key
+
 # Frontend .env example
 VITE_FRONTEND_URL=http://localhost:5173
 VITE_BACKEND_URL=http://localhost:5000
