--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
 		"e2e-encrypted-real-time-chat-app": "file:..",
 		"express": "^4.21.2",
 		"helmet": "^8.0.0",
+		"jsdom": "^26.0.0",
 		"jsonwebtoken": "^9.0.2",
 		"knex": "^3.1.0",
 		"pg": "^8.13.3",
@@ -36,6 +37,7 @@
 		"@types/cookie-parser": "^1.4.8",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^5.0.0",
+		"@types/jsdom": "^21.1.7",
 		"@types/jsonwebtoken": "^9.0.9",
 		"eslint": "^8.57.1",
 		"globals": "^15.15.0",
