--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
 		"@tailwindcss/vite": "^4.0.9",
 		"chat-app": "file:..",
 		"check-password-strength": "^3.0.0",
+		"date-fns": "^4.1.0",
 		"dompurify": "^3.2.4",
 		"e2e-encrypted-real-time-chat-app": "file:..",
 		"libsodium-wrappers": "^0.7.15",
