--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-# Backend .env example
+# Backend .env variables
 NODE_ENV=development
 
-BACKEND_URL=http://localhost:5000
-FRONTEND_URL=http://localhost:5173
+BACKEND_PORT=5000
+FRONTEND_PORT=5173
 
 DB_HOST=your_db_host
 DB_PORT=your_db_port
@@ -17,6 +17,6 @@ REFRESH_TOKEN_EXPIRATION=7d
 
 DB_ENCRYPTION_KEY=your_db_encryption_key
 
-# Frontend .env example
-VITE_FRONTEND_URL=http://localhost:5173
-VITE_BACKEND_URL=http://localhost:5000
+# Frontend .env variables
+VITE_BACKEND_PORT=5000
+VITE_FRONTEND_PORT=5173
