--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,6 @@ DB_ENCRYPTION_KEY=your_db_encryption_key
 # Frontend .env variables
 VITE_BACKEND_PORT=5000
 VITE_FRONTEND_PORT=5173
+
+DB_NAME=chat
+STORE_NAME=keys
