--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
 		"jsonwebtoken": "^9.0.2",
 		"knex": "^3.1.0",
 		"pg": "^8.13.3",
+		"rate-limiter-flexible": "^7.0.0",
 		"real-time-chat-app": "file:..",
 		"socket.io": "^4.8.1"
 	},
