--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ REFRESH_TOKEN_EXPIRATION=7d
 DB_ENCRYPTION_KEY=your_db_encryption_key
 
 # Frontend .env variables
+VITE_ENV=development
 VITE_BACKEND_PORT=5000
 VITE_FRONTEND_PORT=5173
 
