--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
 	"version": "1.0.0",
 	"description": "Secure programming exercise work",
 	"scripts": {
-		"install:all": "npm install && npm install --prefix frontend && npm install --prefix backend",
-		"start:frontend": "npm start --prefix frontend",
-		"start:backend": "npm start --prefix backend",
-		"start": "concurrently \"npm start --prefix backend\" \"npm start --prefix frontend\"",
-		"dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\"",
-		"lint:frontend": "cd frontend && npm run lint",
-		"lint:backend": "cd backend && npm run lint",
-		"lint": "npm run lint:frontend && npm run lint:backend",
-		"format": "npm run format -prefix frontend && npm run format -prefix backend"
+  		"dev": "docker-compose up",
+  		"dev:build": "docker-compose up --build",
+  		"dev:build:no-cache": "docker-compose build --no-cache",
+		"down": "docker-compose down",
+  		"lint:frontend": "cd frontend && npm run lint",
+  		"lint:backend": "cd backend && npm run lint",
+  		"lint": "npm run lint:frontend && npm run lint:backend",
+  		"format": "npm run format --prefix frontend && npm run format --prefix backend",
+  		"local:install:all": "npm install && npm install --prefix frontend && npm install --prefix backend",
+  		"local:start": "concurrently \"npm start --prefix backend\" \"npm start --prefix frontend\"",
+		"local:dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\""
 	},
 	"author": "",
 	"license": "ISC",
