--- a/.env.example
+++ b/.env.example
@@ -4,11 +4,11 @@ NODE_ENV=development
 BACKEND_PORT=5000
 FRONTEND_PORT=5173
 
-DB_HOST=your_db_host
-DB_PORT=your_db_port
-DB_NAME=your_db_name
-DB_USER=your_db_user
-DB_PASSWORD=your_db_password
+DB_NAME=chat
+DB_USER=postgres
+DB_PASSWORD=password
+DB_HOST=db
+DB_PORT=5432
 
 JWT_SECRET=your_jwt_secret
 JWT_REFRESH_SECRET=your_jwt_refresh_secret
@@ -22,5 +22,5 @@ VITE_ENV=development
 VITE_BACKEND_PORT=5000
 VITE_FRONTEND_PORT=5173
 
-DB_NAME=chat
+INDEXED_DB_NAME=chat
 STORE_NAME=keys
