--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,8 @@ services:
     command: sh -c "npm install && npm run dev"
     restart: on-failure:5
     volumes:
-      - ./backend:/app/
+      - ./backend:/app:delegated
+      - backend_node_modules:/app/node_modules
     ports:
       - "${BACKEND_PORT}:5000"
     environment:
@@ -47,7 +48,8 @@ services:
     command: sh -c "npm install && npm run dev"
     restart: on-failure:5
     volumes:
-      - ./frontend:/app/
+      - ./frontend:/app:delegated
+      - frontend_node_modules:/app/node_modules
     ports:
       - "${FRONTEND_PORT}:5173"
     environment:
@@ -61,3 +63,5 @@ services:
 
 volumes:
   pgdata:
+  backend_node_modules:
+  frontend_node_modules:
