--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-	"name": "e2ee-real-time-chat-app",
-	"version": "1.0.0",
-	"description": "Secure programming exercise work",
-	"scripts": {
-  		"dev": "docker-compose up",
-  		"dev:build": "docker-compose up --build",
-  		"dev:build:no-cache": "docker-compose build --no-cache",
-		"down": "docker-compose down",
-  		"lint:frontend": "cd frontend && npm run lint",
-  		"lint:backend": "cd backend && npm run lint",
-  		"lint": "npm run lint:frontend && npm run lint:backend",
-  		"format": "npm run format --prefix frontend && npm run format --prefix backend",
-  		"local:install:all": "npm install && npm install --prefix frontend && npm install --prefix backend",
-  		"local:start": "concurrently \"npm start --prefix backend\" \"npm start --prefix frontend\"",
-		"local:dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\""
-	},
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"prettier": "^3.5.1"
-	},
-	"dependencies": {
-		"concurrently": "^9.1.2"
-	}
+  "name": "e2ee-real-time-chat-app",
+  "version": "1.0.0",
+  "description": "Secure programming exercise work",
+  "scripts": {
+    "dev": "docker-compose up",
+    "dev:build": "docker-compose up --build",
+    "dev:build:no-cache": "docker-compose build --no-cache",
+    "down": "docker-compose down",
+    "clean:modules": "rimraf node_modules backend/node_modules frontend/node_modules && echo 'node_modules cleaned.'",
+    "lint:frontend": "cd frontend && npm run lint",
+    "lint:backend": "cd backend && npm run lint",
+    "lint": "npm run lint:frontend && npm run lint:backend",
+    "format": "npm run format --prefix frontend && npm run format --prefix backend",
+    "local:install": "npm install && npm install --prefix frontend && npm install --prefix backend",
+    "local:start": "concurrently \"npm start --prefix backend\" \"npm start --prefix frontend\"",
+    "local:dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\""
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "prettier": "^3.5.1"
+  },
+  "dependencies": {
+    "concurrently": "^9.1.2",
+    "rimraf": "^6.0.1"
+  }
 }
