--- a/.env.example
+++ b/.env.example
@@ -10,12 +10,12 @@ DB_PASSWORD=password
 DB_HOST=db
 DB_PORT=5432
 
-JWT_SECRET=your_jwt_secret
-JWT_REFRESH_SECRET=your_jwt_refresh_secret
+JWT_SECRET=jwt_secret
+JWT_REFRESH_SECRET=jwt_refresh_secret
 ACCESS_TOKEN_EXPIRATION=15m
 REFRESH_TOKEN_EXPIRATION=7d
 
-DB_ENCRYPTION_KEY=your_db_encryption_key
+DB_ENCRYPTION_KEY=db_encryption_key
 
 # Frontend .env variables
 VITE_ENV=development
