--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     container_name: e2ee-real-time-chat-app-database
     restart: on-failure:5
     environment:
-      POSTGRES_DB: ${DB_NAME}
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME:-chat}
+      POSTGRES_USER: ${DB_USER:-postgres}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-password}
     ports:
       - "${DB_PORT:-5432}:5432"
     volumes:
@@ -23,21 +23,21 @@ services:
       - ./backend:/app:delegated
       - backend_node_modules:/app/node_modules
     ports:
-      - "${BACKEND_PORT}:5000"
+      - "${BACKEND_PORT:-5000}:5000"
     environment:
-      NODE_ENV: ${NODE_ENV}
-      BACKEND_PORT: ${BACKEND_PORT}
-      FRONTEND_PORT: ${FRONTEND_PORT}
-      DB_HOST: ${DB_HOST}
-      DB_PORT: ${DB_PORT}
-      DB_NAME: ${DB_NAME}
-      DB_USER: ${DB_USER}
-      DB_PASSWORD: ${DB_PASSWORD}
-      JWT_SECRET: ${JWT_SECRET}
-      JWT_REFRESH_SECRET: ${JWT_REFRESH_SECRET}
-      ACCESS_TOKEN_EXPIRATION: ${ACCESS_TOKEN_EXPIRATION}
-      REFRESH_TOKEN_EXPIRATION: ${REFRESH_TOKEN_EXPIRATION}
-      DB_ENCRYPTION_KEY: ${DB_ENCRYPTION_KEY}
+      NODE_ENV: ${NODE_ENV:-development}
+      BACKEND_PORT: ${BACKEND_PORT:-5000}
+      FRONTEND_PORT: ${FRONTEND_PORT:-5173}
+      DB_HOST: ${DB_HOST:-db}
+      DB_PORT: ${DB_PORT:-5432}
+      DB_NAME: ${DB_NAME:-chat}
+      DB_USER: ${DB_USER:-postgres}
+      DB_PASSWORD: ${DB_PASSWORD:-password}
+      JWT_SECRET: ${JWT_SECRET:-jwt_secret}
+      JWT_REFRESH_SECRET: ${JWT_REFRESH_SECRET:-jwt_refresh_secret}
+      ACCESS_TOKEN_EXPIRATION: ${ACCESS_TOKEN_EXPIRATION:-15m}
+      REFRESH_TOKEN_EXPIRATION: ${REFRESH_TOKEN_EXPIRATION:-7d}
+      DB_ENCRYPTION_KEY: ${DB_ENCRYPTION_KEY:-db_encryption_key}
     depends_on:
       - db
 
@@ -51,13 +51,13 @@ services:
       - ./frontend:/app:delegated
       - frontend_node_modules:/app/node_modules
     ports:
-      - "${FRONTEND_PORT}:5173"
+      - "${FRONTEND_PORT:-5173}:5173"
     environment:
-      VITE_ENV: ${VITE_ENV}
-      VITE_BACKEND_PORT: ${VITE_BACKEND_PORT}
-      VITE_FRONTEND_PORT: ${VITE_FRONTEND_PORT}
-      INDEXED_DB_NAME: ${DB_NAME}
-      STORE_NAME: ${STORE_NAME}
+      VITE_ENV: ${VITE_ENV:-development}
+      VITE_BACKEND_PORT: ${VITE_BACKEND_PORT:-5000}
+      VITE_FRONTEND_PORT: ${VITE_FRONTEND_PORT:-5173}
+      INDEXED_DB_NAME: ${DB_NAME:-chat}
+      STORE_NAME: ${STORE_NAME:-keys}
     depends_on:
       - backend
 
