Setup unit testing for frontend and backend

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,6 +7,6 @@
 		"skipLibCheck": true,
 		"strict": true
 	},
-	"include": ["./**/*.ts", ".env"],
+	"include": ["./**/*.ts", ".env", "tests/**/*.ts"],
 	"exclude": ["node_modules"]
 }
