--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"start": "tsx index.ts",
 		"dev": "nodemon --legacy-watch --exec tsx index.ts",
+		"test": "jest",
 		"lint": "eslint . --fix",
 		"format": "prettier --write ."
 	},
@@ -28,6 +29,7 @@
 		"jsdom": "^26.0.0",
 		"jsonwebtoken": "^9.0.2",
 		"knex": "^3.1.0",
+		"ms": "^2.1.3",
 		"node-cron": "^3.0.3",
 		"pg": "^8.13.3",
 		"rate-limiter-flexible": "^7.0.0",
@@ -42,12 +44,18 @@
 		"@types/cookie-parser": "^1.4.8",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^5.0.0",
+		"@types/jest": "^29.5.14",
 		"@types/jsdom": "^21.1.7",
 		"@types/jsonwebtoken": "^9.0.9",
 		"@types/node-cron": "^3.0.11",
+		"@types/supertest": "^6.0.3",
 		"eslint": "^8.57.1",
 		"globals": "^15.15.0",
+		"jest": "^29.7.0",
 		"nodemon": "^3.1.9",
+		"supertest": "^7.1.0",
+		"ts-jest": "^29.3.2",
+		"ts-node": "^10.9.2",
 		"tsx": "^4.19.2",
 		"typescript": "^5.7.3",
 		"typescript-eslint": "^8.24.1"
