--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"start": "vite --host 0.0.0.0",
 		"dev": "vite --host 0.0.0.0",
+		"test": "jest",
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
 		"preview": "vite preview",
@@ -34,16 +35,23 @@
 	"devDependencies": {
 		"@esbuild-plugins/node-globals-polyfill": "^0.2.3",
 		"@eslint/js": "^9.21.0",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.3.0",
+		"@types/jest": "^29.5.14",
 		"@types/libsodium-wrappers": "^0.7.14",
 		"@types/node": "^22.13.9",
-		"@types/react": "^19.0.10",
-		"@types/react-dom": "^19.0.4",
+		"@types/react": "^19.1.2",
+		"@types/react-dom": "^19.1.2",
 		"@vitejs/plugin-react": "^4.3.4",
 		"eslint": "^9.21.0",
 		"eslint-plugin-react-hooks": "^5.1.0",
 		"eslint-plugin-react-refresh": "^0.4.19",
 		"globals": "^15.15.0",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
 		"prettier-plugin-tailwindcss": "^0.6.11",
+		"ts-jest": "^29.3.2",
+		"ts-node": "^10.9.2",
 		"typescript": "~5.7.2",
 		"typescript-eslint": "^8.24.1",
 		"vite": "^6.2.0"
