--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev:build:no-cache": "docker-compose build --no-cache",
     "down": "docker-compose down",
     "clean:modules": "rimraf node_modules backend/node_modules frontend/node_modules && echo 'node_modules cleaned.'",
+    "test": "npm test --prefix frontend && npm test --prefix backend",
+    "test:frontend": "cd frontend && npm test",
+    "test:backend": "cd backend && npm test",
     "lint:frontend": "cd frontend && npm run lint",
     "lint:backend": "cd backend && npm run lint",
     "lint": "npm run lint:frontend && npm run lint:backend",
