--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,47 +13,47 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
-		"@tailwindcss/vite": "^4.0.9",
+		"@tailwindcss/vite": "^4.1.4",
 		"bip39": "^3.1.0",
 		"buffer": "^6.0.3",
 		"chat-app": "file:..",
 		"check-password-strength": "^3.0.0",
 		"date-fns": "^4.1.0",
-		"dompurify": "^3.2.4",
+		"dompurify": "^3.2.5",
 		"e2e-encrypted-real-time-chat-app": "file:..",
 		"e2ee-real-time-chat-app": "file:..",
 		"libsodium-wrappers": "^0.7.15",
-		"lucide-react": "^0.487.0",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
-		"react-router-dom": "^7.2.0",
+		"lucide-react": "^0.503.0",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"react-router-dom": "^7.5.2",
 		"real-time-chat-app": "file:..",
 		"socket.io-client": "^4.8.1",
-		"tailwindcss": "^4.0.9",
+		"tailwindcss": "^4.1.4",
 		"tweetnacl": "^1.0.3"
 	},
 	"devDependencies": {
 		"@esbuild-plugins/node-globals-polyfill": "^0.2.3",
-		"@eslint/js": "^9.21.0",
+		"@eslint/js": "^9.25.1",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.3.0",
 		"@types/jest": "^29.5.14",
 		"@types/libsodium-wrappers": "^0.7.14",
-		"@types/node": "^22.13.9",
+		"@types/node": "^22.14.1",
 		"@types/react": "^19.1.2",
 		"@types/react-dom": "^19.1.2",
-		"@vitejs/plugin-react": "^4.3.4",
-		"eslint": "^9.21.0",
-		"eslint-plugin-react-hooks": "^5.1.0",
-		"eslint-plugin-react-refresh": "^0.4.19",
-		"globals": "^15.15.0",
+		"@vitejs/plugin-react": "^4.4.1",
+		"eslint": "^9.25.1",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-react-refresh": "^0.4.20",
+		"globals": "^16.0.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"ts-jest": "^29.3.2",
 		"ts-node": "^10.9.2",
-		"typescript": "~5.7.2",
-		"typescript-eslint": "^8.24.1",
-		"vite": "^6.2.0"
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.31.0",
+		"vite": "^6.3.3"
 	}
 }
