--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       BACKEND_PORT: ${BACKEND_PORT:-5000}
       FRONTEND_PORT: ${FRONTEND_PORT:-5173}
       DB_HOST: ${DB_HOST:-db}
+      DB_SCHEMA: ${DB_SCHEMA:-chat-app}
       DB_PORT: ${DB_PORT:-5432}
       DB_NAME: ${DB_NAME:-chat}
       DB_USER: ${DB_USER:-postgres}
