Use a non root user with docker and update frontend security headers

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@ FRONTEND_PORT=5173
 
 DB_NAME=chat
 DB_SCHEMA=chat-app
-DB_USER=postgres
-DB_PASSWORD=password
+DB_USER=postgres # Change to your database username if running locally
+DB_PASSWORD=password # Change to your database password if running locally
 DB_HOST=db # Change to `localhost` if running locally
 DB_PORT=5432
 
