--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres:17-alpine
+    image: postgres:17.4-alpine3.21
     container_name: e2ee-real-time-chat-app-database
     restart: on-failure:5
     environment:
@@ -19,8 +19,7 @@ services:
     working_dir: /app
     restart: on-failure:5
     volumes:
-      - ./backend:/app:delegated
-      - backend_node_modules:/app/node_modules
+      - backend_data:/app
     ports:
       - "${BACKEND_PORT:-5000}:5000"
     environment:
@@ -48,8 +47,7 @@ services:
     working_dir: /app
     restart: on-failure:5
     volumes:
-      - ./frontend:/app:delegated
-      - frontend_node_modules:/app/node_modules
+      - frontend_data:/app
     ports:
       - "${FRONTEND_PORT:-5173}:5173"
     environment:
@@ -63,5 +61,5 @@ services:
 
 volumes:
   pgdata:
-  backend_node_modules:
-  frontend_node_modules:
+  backend_data:
+  frontend_data:
