--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,8 @@
 	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
-		"start": "vite --host 0.0.0.0",
-		"dev": "vite --host 0.0.0.0",
+		"start": "vite build && vite preview",
+		"dev": "vite",
 		"test": "jest",
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
