--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ NODE_ENV=development # Change to `production` for production runs
 BACKEND_PORT=5000
 FRONTEND_PORT=5173
 
-DB_NAME=chat
+DB_NAME=chat # Change to your database name if running locally
 DB_SCHEMA=chat-app
 DB_USER=postgres # Change to your database username if running locally
 DB_PASSWORD=password # Change to your database password if running locally
